Melhorado Navbar e adcionado Topnav responsiva

--- a/minha_pagina.html
+++ b/minha_pagina.html
@@ -1,17 +1,22 @@
 ﻿<!DOCTYPE html> 
 
 <html>
-	<head> 
+	<head>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">		 
 <title> Eu sou o Jhonata da nova geração </title>
 <link rel="stylesheet" type="text/css" href="./style.css">
-		</head>
+		
 		<body style= "background-color:#4949af; font-family:verdana;">
-			<ul>
+		
+			<ul class="topnav">
 				<li><a class="active" href="#home">Home</a></li>
 				<li><a href="#news">News</a></li>
 				<li><a href="#contact">Contact</a></li>
 				<li><a href="#about">About</a></li>
 			  </ul>
+		
+	</head>			  
+
 <h1> Quem sou eu ? </h1> <br> 
 
 <img src="https://scontent.fgru4-1.fna.fbcdn.net/v/t1.0-9/18699892_1327328564030854_7627601192506917632_n.jpg?_nc_cat=104&_nc_sid=85a577&_nc_eui2=AeEC55gPAsASH94iqIxXk2-NWn6jqtZ5208pBN02d090GE8lgPuZkZm4TjgwZLoxqdRxF5j5nj6CI0ubJlooXp00ynRo3WOl7G9ni-gHDACL2A&_nc_ohc=Tf_ruIVEXJcAX-FeKKf&_nc_ht=scontent.fgru4-1.fna&oh=167134c0777c515cdbc2c9e43d338932&oe=5EA260C8" width="400"/>
@@ -39,13 +44,12 @@ por semana, então vão desde livros, apostilas até ebooks sobre algum assunto 
 ser melhor a cada dia. </p>   
 
 <p>Por gostar de ler biografias eu sempre gostei das pessoas que deixaram ou deixarão marcados os nomes pela eternidade, sendo meus heróis: </p>   
-<div class="navbar">
-<ul>
+
+<ul class="navbar">
 <a href="https://pt.wikipedia.org/wiki/Elon_Musk" target="_blank"><li>Elon Reeve Musk </a></li>   
 <a href="https://pt.wikipedia.org/wiki/Steve_Jobs" target="_blank"><li>Steve Paul Jobs </a></li>  
 <a href="https://pt.wikipedia.org/wiki/Andrew_Carnegie" target="_blank"> <li>Andrew Carnegie   </a> </li>  
 </ul>
-</div>
 
 <p>  Como profissional sou alguém intenso no que estou fazendo e com foco total nas atividades, busco sempre o melhor para meus clientes visando sempre o longo prazo,
 prezando pela ética e em ser melhor a cada dia virtudes aprimoradas durante meu serviço obrigatório no <b>Exército Brasileiro</b>, trabalhei em empresa financeiras como <b>Itaú</b>, <b>W1 Consultoria Financeira</b> e atualmente na <b>InvestPartner</b> que é um dos 
@@ -56,21 +60,19 @@ com a programação, afinal temos muitas pessoas já buscando reclamar do que es
 		
 <p> Essas são as minhas redes sociais: </p>
 
-<div class="navbar">
-<ul>
+<ul class="navbar">
 <a href="https: //br.linkedin.com/in/jhonatasanches" target="_blank"> <li>Linkedin </a></li>
 <a href="https://www.instagram.com/jhonatasanches/?hl=pt-br" target="_blank"> <li>Instagram </a></li>
 <a href="https://www.facebook.com/sanches.jhonata?ref=bookmarks" target="_blank"><li>Facebook </a></li>
 </ul>
-</div>
 
 <br>
 <br>
 <br>
 
-<div class="footer">
-	<p>&copy;&nbsp;Jhonata Sanches 2020</p>
-</div>
+
+	<p class="footer">&copy;&nbsp;Jhonata Sanches 2020</p>
+
 
 </body>
 </html>
